--- a/.github/workflows/build-windows-amd64.yml
+++ b/.github/workflows/build-windows-amd64.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.3.3
         with:
-          vs-version: '16.10'
+          vs-version: '16'
           msbuild-architecture: x64
 
       - name: Install dependencies
@@ -31,7 +31,7 @@ jobs:
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
           echo "ANT_HOME=C:\ProgramData\chocolatey\lib\ant\apache-ant-1.10.14" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "JAVA_HOME=${env:JAVA_HOME}" | Out-File -Append -FilePath $env:GITHUB_ENV
-          echo "VS160COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools" | Out-File -Append -FilePath $env:GITHUB_ENV
+          echo "VS160COMNTOOLS=C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\Tools" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "JCEF_CMAKE=C:\Program Files\CMake\bin" | Out-File -Append -FilePath $env:GITHUB_ENV
       - name: Build JCEF
         run: |
