--- a/.github/workflows/build-windows-amd64.yml
+++ b/.github/workflows/build-windows-amd64.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Install dependencies
         run: |
           choco install ant --version=1.10.14
+          choco install python2
+          echo "PYTHON_27_PATH=C:\Python27"
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
           echo "ANT_HOME=C:\ProgramData\chocolatey\lib\ant\apache-ant-1.10.14" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "JAVA_HOME=${env:JAVA_HOME}" | Out-File -Append -FilePath $env:GITHUB_ENV
