--- a/.github/workflows/build-windows-amd64.yml
+++ b/.github/workflows/build-windows-amd64.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-2019
 
     steps:
       - name: Checkout code
@@ -22,19 +22,19 @@ jobs:
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v2
         with:
-          vs-version: '16'
+          vs-version: '[16.9,16.11)'
           msbuild-architecture: x64
 
       - name: Install dependencies
         run: |
           choco install ant --version=1.10.14
-          choco install python2
-          echo "PYTHON_27_PATH=C:\Python27"
+          choco install python2          
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
           echo "ANT_HOME=C:\ProgramData\chocolatey\lib\ant\apache-ant-1.10.14" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "JAVA_HOME=${env:JAVA_HOME}" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "VS160COMNTOOLS=C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools" | Out-File -Append -FilePath $env:GITHUB_ENV
           echo "JCEF_CMAKE=C:\Program Files\CMake\bin" | Out-File -Append -FilePath $env:GITHUB_ENV
+          echo "PYTHON_27_PATH=C:\Python27" | Out-File -Append -FilePath $env:GITHUB_ENV
       - name: Build JCEF
         run: |
           cd .\jb\tools\windows
