--- a/.github/workflows/build-windows-amd64.yml
+++ b/.github/workflows/build-windows-amd64.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v2
         with:
-          vs-version: '[16.9,16.11)'
+          vs-version: '16.11'
           msbuild-architecture: x64
 
       - name: Install dependencies
