--- a/.github/workflows/build-windows-amd64.yml
+++ b/.github/workflows/build-windows-amd64.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           choco install ant --version=1.10.14
-          choco install python2      
+          choco install python2
           choco install cygwin --version 3.5.3 -y --params "/DesktopIcon=no /noStartMenu /packages:sed"
           choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
           echo "ANT_HOME=C:\ProgramData\chocolatey\lib\ant\tools\apache-ant-1.10.14" | Out-File -Append -FilePath $env:GITHUB_ENV
@@ -39,7 +39,7 @@ jobs:
       - name: Build JCEF
         run: |
           cd .\jb\tools\windows
-          cygwin\bin\bash.exe -c "cmd /c build.bat all x86_64"
+          C:\tools\Cygwin\bin\bash.exe -c "cmd /c build.bat all x86_64"
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
