--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.2</version>
-                <goals><goal>deploy-file</goal></goals>
+                <goals>
+                    <goal>deploy-file</goal>
+                </goals>
                 <configuration>
                     <repositoryId>space-intellij-dependencies</repositoryId>
                     <packaging>jar</packaging>
@@ -76,6 +78,29 @@
                     <file>out/jcef.jar</file>
                     <sources>out/jcef-sources.jar</sources>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>install-jcef</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                            <artifactId>${project.artifactId}</artifactId>
+                            <groupId>${project.groupId}</groupId>
+                            <version>${project.version}</version>
+                            <file>out/jcef.jar</file>
+                            <sources>out/jcef-sources.jar</sources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
