JBR-7587 build: thrift

--- a/build.xml
+++ b/build.xml
@@ -119,6 +119,8 @@
       <fileset dir="${out.path}">
         <include name="org/cef/**"/>
         <include name="com/jetbrains/**"/>
+        <include name="org/apache/thrift/**"/>
+        <include name="org/slf4j/**"/>
         <include name="${include.module-info.class}"/>
       </fileset>
     </jar>
@@ -126,6 +128,8 @@
       <fileset dir="java">
         <include name="org/cef/**"/>
         <include name="com/jetbrains/**"/>
+        <include name="org/apache/thrift/**"/>
+        <include name="org/slf4j/**"/>
       </fileset>
     </jar>
   </target>
