--- a/jb/tools/linux/Dockerfile_arm64
+++ b/jb/tools/linux/Dockerfile_arm64
@@ -1,58 +1,35 @@
-FROM arm64v8/centos:7
+FROM arm64v8/ubuntu:20.04
 
-RUN yum update -y && \
-    yum -y install centos-release-scl && \
-    yum -y install devtoolset-10-10.1-0.el7
+# Install the necessary build tools
+ARG DEBIAN_FRONTEND=noninteractive
+ARG DEBCONF_NONINTERACTIVE_SEEN=true 
 
-RUN yum install -y wget curl git python3 flex bison && \
-    yum install -y perl-IPC-Cmd && \
-    yum install -y \
-        alsa-lib-devel-1.1.8-1.el7 \
-        at-spi2-atk-devel-2.26.2-1.el7 \
-        cairo-devel-1.15.12-4.el7 \
-        cups-devel-1.6.3-51.el7 \
-        libX11-devel-1.6.7-4.el7_9 \
-        libXcomposite-devel-0.4.4-4.1.el7 \
-        libXdamage-devel-1.1.4-4.1.el7 \
-        libXrandr-devel-1.5.1-2.el7 \
-        libdrm-devel-2.4.97-2.el7 \
-        libxkbcommon-devel-0.7.1-3.el7 \
-        mesa-libgbm-devel-18.3.4-12.el7_9 \
-        pango-devel-1.42.4-4.el7_7
+RUN apt-get update && \
+    echo 'tzdata tzdata/Areas select Etc' | debconf-set-selections && \
+    echo 'tzdata tzdata/Zones/Etc select UTC' | debconf-set-selections && \
+    apt-get install -y \
+        ant=1.10.7-1 \
+        libgbm-dev=21.2.6-0ubuntu0.1~20.04.2 \
+        libxkbcommon-x11-dev=0.10.0-1 \
+        bison=2:3.5.1+dfsg-1 \
+        build-essential=12.8ubuntu1.1 \
+        curl=7.68.0-1ubuntu2.23 \
+        ninja-build=1.10.0-1build1 \
+        flex=2.6.4-6.2 \
+        git=1:2.25.1-1ubuntu3.13 \
+        openjdk-17-jdk \
+        pkg-config=0.29.1-0ubuntu4 \
+        python3=3.8.2-0ubuntu2 \
+        tar=1.30+dfsg-7ubuntu0.20.04.4 \
+        unzip=6.0-25ubuntu1.2 \
+        zip=3.0-11build1
 
-RUN yum -y clean all
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-arm64/        
 
-RUN pip3 install --upgrade pip && pip3 install ninja
-
-RUN rpm --import https://yum.corretto.aws/corretto.key
-RUN curl -L -o /etc/yum.repos.d/corretto.repo https://yum.corretto.aws/corretto.repo
-RUN yum install -y java-17-amazon-corretto-devel
-ENV JAVA_HOME=/usr/lib/jvm/java-17-amazon-corretto
-RUN ${JAVA_HOME}/bin/javac -version
-
-ARG ANT_VERSION=1.10.14
-RUN wget -nv -O ant.tgz https://dlcdn.apache.org//ant/binaries/apache-ant-${ANT_VERSION}-bin.tar.gz && \
-    tar xfz ant.tgz -C /opt && \
-    rm ant.tgz
-ENV ANT_HOME=/opt/apache-ant-${ANT_VERSION}
-RUN ${ANT_HOME}/bin/ant -version
-
-RUN wget -nv -O /cmake.tar.gz https://github.com/Kitware/CMake/releases/download/v3.23.1/cmake-3.23.1-linux-$(uname -m).tar.gz && \
-    tar xfz /cmake.tar.gz --strip-components=1 -C /usr/local && \
-    rm /cmake.tar.gz && \
+ARG CMAKE_VERIONS=3.30.3
+RUN curl -sSL https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERIONS}/cmake-${CMAKE_VERIONS}-linux-aarch64.tar.gz | tar -xz -C /opt/ && \
+    ln -s /opt/cmake-${CMAKE_VERIONS}-linux-aarch64/bin/cmake /usr/local/bin/cmake && \
+    ln -s /opt/cmake-${CMAKE_VERIONS}-linux-aarch64/bin/ctest /usr/local/bin/ctest && \
     cmake --version
 
-RUN git config --global --add safe.directory '*'
-
-# from /opt/rh/devtoolset-10/enable
-ENV PATH=/opt/rh/devtoolset-10/root/usr/bin${PATH:+:${PATH}}
-ENV MANPATH=/opt/rh/devtoolset-10/root/usr/share/man:${MANPATH}
-ENV INFOPATH=/opt/rh/devtoolset-10/root/usr/share/info${INFOPATH:+:${INFOPATH}}
-ENV PCP_DIR=/opt/rh/devtoolset-10/root
-ENV LD_LIBRARY_PATH=/opt/rh/devtoolset-10/root$rpmlibdir$rpmlibdir32${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
-ENV LD_LIBRARY_PATH=/opt/rh/devtoolset-10/root$rpmlibdir$rpmlibdir32:/opt/rh/devtoolset-10/root$rpmlibdir/dyninst$rpmlibdir32/dyninst${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
-ENV PKG_CONFIG_PATH=/opt/rh/devtoolset-10/root/usr/lib64/pkgconfig${PKG_CONFIG_PATH:+:${PKG_CONFIG_PATH}}
-
-ENV JCEF_CLEANUP_VCPKG=1
-
-RUN echo "git clone https://github.com/JetBrains/jcef.git && cd jcef && bash jb/tools/linux/build.sh all arm64" > /build.sh
+RUN echo 'cd /mnt/home/develop/jcef_master_linux && sh ./build.sh' > /go.sh;
